@@ -221,12 +221,12 @@ SEXP Csparse_subassign(SEXP x, SEXP i_, SEXP j_, SEXP value)
     // and assign the i- and x- slots at the end, as they are potentially modified
     // not just in content, but also in their *length*
     int *rp = INTEGER(r_pslot),
-	*ri = Calloc(nnz_x, int);       // to contain the final i - slot
+	*ri = R_Calloc(nnz_x, int);       // to contain the final i - slot
     Memcpy(ri, INTEGER(islot), nnz_x);
     Type_x_0_init(z_ans);
     Type_x_1_init(one_ans);
 #ifdef _has_x_slot_
-    Type_x *rx = Calloc(nnz_x, Type_x); // to contain the final x - slot
+    Type_x *rx = R_Calloc(nnz_x, Type_x); // to contain the final x - slot
     Memcpy(rx, STYP_x(GET_SLOT(x, Matrix_xSym)), nnz_x);
 #endif
     // NB:  nnz_x : will always be the "current allocated length" of (i, x) slots
@@ -367,7 +367,7 @@ SEXP Csparse_subassign(SEXP x, SEXP i_, SEXP j_, SEXP value)
 		    // extend the  i  and  x  slot by one entry : ---------------------
 		    if(nnz+1 > nnz_x) { // need to reallocate:
 #ifdef MATRIX_SUBASSIGN_VERBOSE
-			if(verbose) REprintf(" Realloc()ing: nnz_x=%d", nnz_x);
+			if(verbose) REprintf(" R_Realloc()ing: nnz_x=%d", nnz_x);
 #endif
 			// do it "only" 1x,..4x at the very most increasing by the
 			// nnz-length of "value":
@@ -376,9 +376,9 @@ SEXP Csparse_subassign(SEXP x, SEXP i_, SEXP j_, SEXP value)
 			if(verbose) REprintf("(nnz_v=%d) --> %d ", nnz_val, nnz_x);
 #endif
 			// C doc on realloc() says that the old content is *preserve*d
-			ri = Realloc(ri, nnz_x, int);
+			ri = R_Realloc(ri, nnz_x, int);
 #ifdef _has_x_slot_
-			rx = Realloc(rx, nnz_x, Type_x);
+			rx = R_Realloc(rx, nnz_x, Type_x);
 #endif
 		    }
 		    // 3) fill them ...
@@ -426,9 +426,9 @@ SEXP Csparse_subassign(SEXP x, SEXP i_, SEXP j_, SEXP value)
     Memcpy(INTEGER(ALLOC_SLOT(ans, Matrix_iSym,  INTSXP, nnz)), ri, nnz);
 #ifdef _has_x_slot_
     Memcpy( STYP_x(ALLOC_SLOT(ans, Matrix_xSym,   SXP_x, nnz)), rx, nnz);
-    Free(rx);
+    R_Free(rx);
 #endif
-    Free(ri);
+    R_Free(ri);
     UNPROTECT(n_prot);
     return ans;
 }
