@@ -12,7 +12,7 @@
 %%  when \code{prod(dim(.))} is larger than \eqn{2^{31} - 1}.
 %
 
-\section{Changes in version 1.4-1 (2022-01-06 r3429)}{
+\section{Changes in version 1.4-1 (2022-01-13 r3430)}{
   \subsection{Bug Fixes}{
     \itemize{
       \item \code{diag(x)} methods now mostly also keep \code{names} from
@@ -32,6 +32,13 @@
 
       \item Export more low-level conversion utilities:
       \code{.n2dgT}, \code{.m2ngCn}, \code{.m2ngTn}.
+    }
+  }
+  \subsection{Misc}{
+    \itemize{
+      \item Our C sources now use \code{R_Calloc()}, \code{R_Free()}
+      etc, instead of the shorter versions with 'R_'. Consequently, we
+      get closer to \code{STRICT_R_HEADERS}.
     }
   }
 }
